feat: Beginn UI Player + Index, CSS Grundgesrüst

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,37 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MILO</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MILO</title>
+    <link rel="stylesheet" href="./styles/combined.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>milo</h1>
+      <nav>
+        <a href="/über-uns" class="button">Über uns</a>
+        <a href="/anleitung" class="button">Anleitung</a>
+      </nav>
+    </header>
+    <main>
+        <h2>Musik hören. Ohne Barrieren.</h2>
+        <p>milo ist ein minimalistischer Web-Musikplayer, der speziell für Menschen mit motorischen Einschränkungen entwickelt wurde. Ganz ohne Maus – vollständig über die Tastatur bedienbar.</p>
+        <p>Intuitiv. Reduziert. Zugänglich.</p>
+
+        <span>Barrierearm Logo</span>
+        <p>Barrierearme Oberfläche</p>
+
+        <span>Tastatur Logo</span>
+        <p>Tastatursteuerung</p>
+
+        <span>Screenreader Logo</span>
+        <p>Kompatibel mit Screenreader</p>
+
+        <span>Play Logo</span>
+        <p>Einfache Nutzung</p>
+
+        <button id="start-btn" class="button">Jetzt starten</button>
+    </main>
+  </body>
 </html>
