--- a/src/player.html
+++ b/src/player.html
@@ -19,23 +19,29 @@
             <input type="file" id="fileInput" accept="audio/mpeg" />
 
             <h2>Sie hören:</h2>
-            <img src="./images/placeholder.png" alt="Album Cover" class="album-cover">
+            <div class="player-grid">
+            <img class="cover" src="../assets/images/placeholder-cover.png" alt="Album Cover" class="album-cover">
             <div class="track-info">
                 <h3>Titel</h3>
-                <p>Interpret</p>
-                <p>Album</p>
+                <div class="track-details">
+                    <p class="artist">Interpret</p>
+                    <p class="album">Album</p>
+                </div>
             </div>
 
-            <button id="warteschlange-btn" class="button">Warteschlange</button>
-            <button id="loop-btn" class="button">Loop</button>
-            <button id="leiser-btn" class="button">Leiser</button>
-            <button id="lauter-btn" class="button">Lauter</button>
-
+            <div class="button-group">
+                <button id="warteschlange-btn" class="button">Warteschlange</button>
+                <button id="loop-btn" class="button">Loop</button>
+                <button id="leiser-btn" class="button">Leiser</button>
+                <button id="lauter-btn" class="button">Lauter</button>
+            </div>
+            
             <button id="back-btn" class="button">Zurück</button>
-            <div style="margin-top: 1rem;">
-                <button id="playPauseBtn" disabled>Play</button>
+            <div>
+                <button class="play-pause-btn"id="playPauseBtn" disabled>PLAY</button>
             </div>
             <button id="forward-btn" class="button">Vorwärts</button>
+            </div>
 
             <div id="progress-container" hidden>
                 <input type="range" id="progressBar" min="0" value="0" step="0.1" aria-label="Song Progress" />
