style: Landing Page + Icons Buttons

--- a/src/index.html
+++ b/src/index.html
@@ -15,23 +15,37 @@
       </nav>
     </header>
     <main>
-        <h2>Musik hören. Ohne Barrieren.</h2>
-        <p>milo ist ein minimalistischer Web-Musikplayer, der speziell für Menschen mit motorischen Einschränkungen entwickelt wurde. Ganz ohne Maus – vollständig über die Tastatur bedienbar.</p>
-        <p>Intuitiv. Reduziert. Zugänglich.</p>
+      <h2>Musik hören. <span class="yellow">Ohne Barrieren.</span></h2>
+      <p class="text">
+        milo ist ein minimalistischer Web-Musikplayer, der speziell für Menschen
+        mit motorischen Einschränkungen entwickelt wurde. Ganz ohne Maus –
+        vollständig über die Tastatur bedienbar.
+      </p>
+      <p class="text bold">Intuitiv. Reduziert. Zugänglich.</p>
 
-        <span>Barrierearm Logo</span>
-        <p>Barrierearme Oberfläche</p>
+      <div class="icon-container">
+        <div>
+          <img src="../assets/icons/barrierearm.svg" class="icon-index" />
+          <p class="description">Barrierearme Oberfläche</p>
+        </div>
 
-        <span>Tastatur Logo</span>
-        <p>Tastatursteuerung</p>
+        <div>
+          <img src="../assets/icons/keyboard.svg" class="icon-index" />
+          <p class="description">Tastatursteuerung</p>
+        </div>
 
-        <span>Screenreader Logo</span>
-        <p>Kompatibel mit Screenreader</p>
+        <div>
+          <img src="../assets/icons/screenreader.svg" class="icon-index" />
+          <p class="description">Kompatibel mit Screenreader</p>
+        </div>
 
-        <span>Play Logo</span>
-        <p>Einfache Nutzung</p>
+        <div>
+          <img src="../assets/icons/nutzung.svg" class="icon-index" />
+          <p class="description">Einfache Nutzung</p>
+        </div>
+      </div>
 
-        <button id="start-btn" class="button">Jetzt starten</button>
+      <button id="start-btn" class="button">Jetzt starten</button>
     </main>
   </body>
 </html>
