--- a/src/player.html
+++ b/src/player.html
@@ -1,57 +1,136 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MILO</title>
-        <link rel="stylesheet" href="./styles/combined.css">
-        <link rel="stylesheet" href="./styles/player.css">
-    </head>
-    <body>
-        <header>
-            <h1>milo</h1>
-            <nav>
-                <a href="/über-uns" class="button">Über uns</a>
-                <a href="/anleitung" class="button">Anleitung</a>
-            </nav>
-        </header>
-        <main>
-            <label for="fileInput">MP3-Datei auswählen:</label>
-            <input type="file" id="fileInput" accept="audio/mpeg" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MILO</title>
+    <link rel="stylesheet" href="./styles/combined.css" />
+    <link rel="stylesheet" href="./styles/player.css" />
+  </head>
+  <body>
+    <header>
+      <h1>milo</h1>
+      <nav>
+        <a href="/über-uns" class="button">Über uns</a>
+        <a href="/anleitung" class="button">Anleitung</a>
+      </nav>
+    </header>
+    <main>
+      <label for="fileInput">MP3-Datei auswählen:</label>
+      <input type="file" id="fileInput" accept="audio/mpeg" />
 
-            <h2>Sie hören:</h2>
-            <div class="player-grid">
-            <img class="cover" src="../assets/images/placeholder-cover.png" alt="Album Cover" class="album-cover">
-            <div class="track-info">
-                <h3 id="js-title">Titel</h3>
-                <div class="track-details">
-                    <p class="artist" id="js-artist">Interpret</p>
-                    <p class="album" id="js-album">Album</p>
-                </div>
-            </div>
+      <h2>Sie hören:</h2>
+      <div class="player-grid">
+        <img
+          class="cover"
+          src="../assets/images/placeholder-cover.png"
+          alt="Album Cover"
+          class="album-cover"
+        />
+        <div class="track-info">
+          <h3 id="js-title">Titel</h3>
+          <div class="track-details">
+            <p class="artist" id="js-artist">Interpret</p>
+            <p class="album" id="js-album">Album</p>
+          </div>
+        </div>
 
-            <div class="button-group">
-                <button id="warteschlange-btn" class="button">Warteschlange</button>
-                <button id="loop-btn" class="button">Loop</button>
-                <button id="leiser-btn" class="button">Leiser</button>
-                <button id="lauter-btn" class="button">Lauter</button>
-            </div>
-            
-            <button id="back-btn" class="button">Zurück</button>
-            <div>
-                <button class="play-pause-btn"id="playPauseBtn" disabled>PLAY</button>
-            </div>
-            <button id="forward-btn" class="button">Vorwärts</button>
-            </div>
+        <div class="button-group">
+          <button id="warteschlange-btn" class="button">
+            <svg
+              width="54"
+              height="48"
+              viewBox="0 0 54 48"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M41.375 34.4348V4C41.375 4 50 6.89855 50 15.5942M29.875 6.89855H4M29.875 18.4928H4M15.5 30.087H4M41.375 37.0435C41.375 40.8855 37.5135 44 32.75 44C27.9865 44 24.125 40.8855 24.125 37.0435C24.125 33.2015 27.9865 30.087 32.75 30.087C37.5135 30.087 41.375 33.2015 41.375 37.0435Z"
+                stroke="#F5F5F5"
+                stroke-width="7"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+          <button id="loop-btn" class="button">
+            <svg
+              width="47"
+              height="53"
+              viewBox="0 0 47 53"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M34.6429 20.875L43 12.4375M43 12.4375L34.6429 4M43 12.4375L4 12.4375V20.875M12.3571 32.125L4 40.5625M4 40.5625L12.3571 49M4 40.5625L43 40.5625V32.125"
+                stroke="#F5F5F5"
+                stroke-width="7"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+          <button id="leiser-btn" class="button">
+            <svg
+              width="49"
+              height="48"
+              viewBox="0 0 49 48"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M40.6071 13.6002C43.3181 16.2432 45 19.9262 45 24C45 27.2784 43.5357 31.2814 40.6071 34.1939M25.5537 43.3194C27.4612 44.9002 30.3571 43.5513 30.3571 41.0819V37.1064V24V6.9181C30.3571 4.44875 27.4612 3.09979 25.5537 4.68063L18.0571 10.8936L12.7857 15.2624H6.92857C5.31117 15.2624 4 16.5664 4 18.175V29.8251C4 31.4336 5.31117 32.7376 6.92857 32.7376L12.7855 32.7371C15.2786 34.8033 16.6764 35.9618 19.1695 38.028L25.5537 43.3194Z"
+                stroke="#F5F5F5"
+                stroke-width="8"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+          <button id="lauter-btn" class="button">
+            <svg
+              width="59"
+              height="50"
+              viewBox="0 0 59 50"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M39.4167 14.6002C42.0394 17.2432 43.6667 20.9262 43.6667 25C43.6667 28.2784 42.25 32.2814 39.4167 35.1939M47.5312 6.46474C52.1458 11.2083 55 17.7615 55 25C55 30.8908 53.5833 38.1064 47.9167 42.4752M24.8528 44.3194C26.6982 45.9002 29.5 44.5513 29.5 42.0819V38.1064V25V7.9181C29.5 5.44875 26.6982 4.09979 24.8528 5.68063L17.6 11.8936L12.5 16.2624H6.83333C5.26853 16.2624 4 17.5664 4 19.175V30.8251C4 32.4336 5.26853 33.7376 6.83333 33.7376L12.4998 33.7371C14.9118 35.8033 16.2642 36.9618 18.6762 39.028L24.8528 44.3194Z"
+                stroke="#F5F5F5"
+                stroke-width="8"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+        </div>
 
-            <div id="progress-container" hidden>
-                <input type="range" id="progressBar" min="0" value="0" step="0.1" aria-label="Song Progress" />
-                <div id="time-display">00:00 / 00:00</div>
-            </div>
+        <button id="back-btn" class="button">Zurück</button>
+        <div>
+          <button class="play-pause-btn" id="playPauseBtn" disabled>
+            PLAY
+          </button>
+        </div>
+        <button id="forward-btn" class="button">Vorwärts</button>
+      </div>
 
-            <div id="status" aria-live="polite" role="status"></div>
+      <div id="progress-container" hidden>
+        <input
+          type="range"
+          id="progressBar"
+          min="0"
+          value="0"
+          step="0.1"
+          aria-label="Song Progress"
+        />
+        <div id="time-display">00:00 / 00:00</div>
+      </div>
 
-            <audio id="audioElement"></audio>
-        </main>
-        <script src="./scripts/jsmediatags.min.js"></script>
-        <script src="./scripts/player.js" defer></script>
+      <div id="status" aria-live="polite" role="status"></div>
+
+      <audio id="audioElement"></audio>
+    </main>
+    <script src="./scripts/jsmediatags.min.js"></script>
+    <script src="./scripts/player.js" defer></script>
+  </body>
 </html>
