style: Vor- und Zurückspulen Icons

--- a/src/player.html
+++ b/src/player.html
@@ -105,13 +105,59 @@
           </button>
         </div>
 
-        <button id="back-btn" class="button">Zurück</button>
+        <button id="back-btn" class="button">
+          <svg
+            width="92"
+            height="72"
+            viewBox="0 0 92 72"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M86 6L86 66L46 36L86 6Z"
+              stroke="#F5F5F5"
+              stroke-width="12"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M46 6L46 66L6 36L46 6Z"
+              stroke="#F5F5F5"
+              stroke-width="12"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </button>
         <div>
           <button class="play-pause-btn" id="playPauseBtn" disabled>
             PLAY
           </button>
         </div>
-        <button id="forward-btn" class="button">Vorwärts</button>
+        <button id="forward-btn" class="button">
+          <svg
+            width="92"
+            height="72"
+            viewBox="0 0 92 72"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M6 66V6L46 36L6 66Z"
+              stroke="#F5F5F5"
+              stroke-width="12"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M46 66V6L86 36L46 66Z"
+              stroke="#F5F5F5"
+              stroke-width="12"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </button>
       </div>
 
       <div id="progress-container" hidden>
