ops: Aria-Labels hinzugefügt

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -5,25 +6,26 @@
     <title>MILO</title>
     <link rel="stylesheet" href="./styles/combined.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="icon" href="../favicon.ico" />
   </head>
   <body>
-    <header>
+    <header aria-label="Header">
       <h1>milo</h1>
-      <nav>
+      <nav aria-label="Navigation">
         <a href="/über-uns" class="button">Über uns</a>
         <a href="/anleitung" class="button">Anleitung</a>
       </nav>
     </header>
-    <main>
+    <main aria-label="Hauptinhalt">
       <h2>Musik hören. <span class="yellow">Ohne Barrieren.</span></h2>
-      <p class="text">
+      <p class="text" aria-label="Beschreibung">
         milo ist ein minimalistischer Web-Musikplayer, der speziell für Menschen
         mit motorischen Einschränkungen entwickelt wurde. Ganz ohne Maus –
         vollständig über die Tastatur bedienbar.
       </p>
       <p class="text bold">Intuitiv. Reduziert. Zugänglich.</p>
 
-      <div class="icon-container">
+      <div class="icon-container" aria-label="Funktionen">
         <div>
           <img src="../assets/icons/barrierearm.svg" class="icon-index" />
           <p class="description">Barrierearme Oberfläche</p>
