ops: Aria Optimierung

--- a/src/player.html
+++ b/src/player.html
@@ -16,7 +16,7 @@
         <a href="/anleitung" class="button">Anleitung</a>
       </nav>
     </header>
-    <main aria-label="Musik-Player">
+    <main aria-label="Musik-Player" role="main">
       <label for="fileInput">MP3-Datei auswählen:</label>
       <input class="file-input" type="file" id="fileInput" accept="audio/mpeg" />
 
@@ -54,7 +54,7 @@
               />
             </svg>
           </button>
-          <button id="loop-btn" class="button" aria-label="Loop">
+          <button id="loop-btn" class="button" aria-label="Loop" aria-pressed="false">
             <svg
               width="47"
               height="53"
