ops: Aria Label Progress Bar

--- a/src/player.html
+++ b/src/player.html
@@ -160,7 +160,7 @@
         </button>
       </div>
 
-      <div id="progress-container" hidden>
+      <div id="progress-container" aria-label="Wiedergabe-Fortschritt" hidden>
         <input
           class="progressbar"
           type="range"
