style: Warteliste Ansicht

--- a/src/player.html
+++ b/src/player.html
@@ -6,6 +6,7 @@
     <title>MILO</title>
     <link rel="stylesheet" href="./styles/combined.css" />
     <link rel="stylesheet" href="./styles/player.css" />
+    <link rel="stylesheet" href="./styles/queue.css" />
     <link rel="icon" href="../favicon.ico" />
   </head>
   <body>
