style: Zurück-Button

--- a/src/player.html
+++ b/src/player.html
@@ -203,7 +203,7 @@
       <section id="queueView" style="display: none">
         <h2>Warteschlange</h2>
         <ul id="queueList"></ul>
-        <button id="backToPlayerBtn">Zurück zum Player</button>
+        <button id="backToPlayerBtn" class="back-btn">Zurück zum Player</button>
       </section>
     </main>
     <script src="./scripts/jsmediatags.min.js"></script>
