style: Landing Page Button

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <button id="start-btn" class="button">Jetzt starten</button>
+      <button id="start-btn" class="button"><a href="./player.html">Jetzt starten</a></button>
     </main>
   </body>
 </html>
