build+style: Anleitung fertig

--- a/src/instruction.html
+++ b/src/instruction.html
@@ -32,11 +32,67 @@
         </p>
       </section>
 
-      <section>
+      <section class="controls">
+        <h3>Tastatursteuerung</h3>
+        <div class="text-container">
+          <div class="text-container-item">
+            <h4>Tabulator Taste</h4>
+            <p class="explanation">
+              Mit der Tabulator-Taste (Tab) lassen sich alle interaktiven
+              Elemente der Reihe nach ansteuern, während die Kombination aus
+              Shift + Tab die Navigation in umgekehrter Richtung erlaubt.
+            </p>
+          </div>
+
+          <div class="text-container-item">
+            <h4>Leertaste</h4>
+            <p class="explanation">
+              Mit der Leertaste kann die Wiedergabe gestartet oder pausiert
+              werden.
+            </p>
+          </div>
+
+          <div class="text-container-item">
+            <h4>Rechts/Links</h4>
+            <p class="explanation">
+              Die Pfeiltasten nach rechts und links springen zum nächsten
+              beziehungsweise vorherigen Track.
+            </p>
+          </div>
+
+          <div class="text-container-item">
+            <h4>Oben/Unten</h4>
+            <p class="explanation">
+              Die Pfeiltasten nach oben und unten steuern die Lautstärke.
+            </p>
+          </div>
+
+          <div class="text-container-item">
+            <h4>Taste „M“</h4>
+            <p class="explanation">
+              Die Taste „M“ schaltet den Ton stumm oder hebt die Stummschaltung
+              wieder auf.
+            </p>
+          </div>
+
+          <div class="text-container-item">
+            <h4>Taste „L“</h4>
+            <p class="explanation">
+              Die Taste „L“ aktiviert oder deaktiviert die Loop-Funktion.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="features">
+        <h3>Funktionen</h3>
         <div class="image-container">
-          <div class="text-section">
-            <h3>Tastatursteuerung</h3>
-            <p class="text" aria-label="Tastatursteuerung-Erklärung">
+          <div class="image-container-item">
+            <img
+              src="../assets/images/song-info.png"
+              alt="Songinformationen im Player"
+            />
+            <p class="explanation">
               Sobald eine Musikdatei ausgewählt wurde, zeigt der Player links
               das zugehörige Albumcover an. Rechts daneben werden der Titel, die
               Künstler:innen sowie der Name des Albums angezeigt. Diese
@@ -44,33 +100,73 @@
               aktualisiert, sobald ein neuer Song geladen wird.
             </p>
           </div>
-          <img src="../assets/images/tab.png" alt="Tabulatortaste" />
-        </div>
 
-        <div class="keyboard-controls" aria-label="Shortcuts">
-          <div class="table-section">
-            <p class="big">Leertaste</p>
-            <p class="explanation">startet oder pausiert die Wiedergabe.</p>
-          </div>
-          <p class="big">Pfeiltasten</p>
-          <div class="table-section">
-            <p class="big">rechts</p>
-            <p class="explanation">spult 5 Sekunden im Track vor.</p>
-            <p class="big">links</p>
-            <p class="explanation">spult 5 Sekunden im Track zurück.</p>
-            <p class="big">oben</p>
-            <p class="explanation">erhöht die Lautstärke um 10%.</p>
-            <p class="big">unten</p>
-            <p class="explanation">verringert die Lautstärke um 10%.</p>
-          </div>
-          <div class="table-section">
-            <p class="big">"M"</p>
+          <div class="image-container-item">
+            <img src="../assets/images/play.png" alt="Play- und Pause-Button" />
             <p class="explanation">
-              schaltet den Ton stumm oder hebt die Stummschaltung auf.
+              Der zentrale große Button mit der Aufschrift „PLAY“ dient zum
+              Starten und Pausieren der Wiedergabe. Sobald ein Song gestartet
+              wurde, wechselt der Button die Beschriftung zu „PAUSE“. Diese
+              Funktion lässt sich auch bequem über die Leertaste (SPACE) auf der
+              Tastatur steuern.
             </p>
-            <p class="big">"L"</p>
+          </div>
+
+          <div class="image-container-item">
+            <img
+              src="../assets/images/skip.png"
+              alt="Buttons zum Überspringen von Songs"
+            />
             <p class="explanation">
-              aktiviert oder deaktiviert die Loop-Funktion.
+              Mit den Doppelpfeil-Schaltflächen unter dem Player kannst du zum
+              vorherigen bzw. nächsten Song in der Warteschlange springen. Die
+              linke Taste startet den vorherigen Titel neu oder wechselt zum
+              Song davor, während die rechte Taste direkt zum nächsten Titel
+              überspringt. Die aktuelle Wiedergabe wird dabei sofort beendet und
+              der neue Track gestartet.
+            </p>
+          </div>
+
+          <div class="image-container-item">
+            <img
+              src="../assets/images/list.png"
+              alt="Button zur Warteschlangenansicht"
+            />
+            <p class="explanation">
+              Der Button mit dem Notensymbol und mehreren Linien führt zur
+              Warteschlangenansicht. In dieser Ansicht können mehrere Songs
+              verwaltet werden, die zuvor gemeinsam ausgewählt wurden. Die
+              Warteschlange erlaubt es, Songs nach oben oder unten zu
+              verschieben sowie einzelne Titel zu entfernen. Der aktuell
+              abgespielte Titel wird dabei stets hervorgehoben.
+            </p>
+          </div>
+
+          <div class="image-container-item">
+            <img src="../assets/images/volume.png" alt="Lautstärkeregelung" />
+            <p class="explanation">
+              Mit den Lauter- und Leiser-Schaltflächen kannst du die
+              Wiedergabelautstärke in kleinen Schritten anpassen. Der linke
+              Button reduziert die Lautstärke, der rechte erhöht sie. Zusätzlich
+              kann die Lautstärke auch über die Pfeiltasten nach oben (lauter)
+              und unten (leiser) auf der Tastatur gesteuert werden – ideal für
+              eine barrierearme Nutzung ohne Maus.
+            </p>
+          </div>
+
+          <div class="image-container-item">
+            <img
+              src="../assets/images/loop.png"
+              alt="Loop-Funktion aktivieren oder deaktivieren"
+            />
+            <p class="explanation">
+              Mit dem Loop-Button kannst du festlegen, ob der aktuell
+              ausgewählte Track nach dem Ende automatisch erneut abgespielt
+              werden soll. Ist die Funktion aktiviert, wird der Song in
+              Dauerschleife wiedergegeben. Der Status wird durch ein Symbol im
+              Button sowie durch eine Statusanzeige unter dem Player deutlich
+              gemacht. Alternativ lässt sich Loop auch über die Taste „L“ auf
+              der Tastatur ein- oder ausschalten.
             </p>
           </div>
         </div>
