fix: Verlinkung Anleitung

--- a/src/player.html
+++ b/src/player.html
@@ -14,7 +14,7 @@
       <h1>milo</h1>
       <nav aria-label="Navigation">
         <a href="/über-uns" class="button">Über uns</a>
-        <a href="/anleitung" class="button">Anleitung</a>
+        <a href="/src/instruction.html" class="button">Anleitung</a>
       </nav>
     </header>
 
